# study_libfirm

./: README.md
firmforth/: CMakeLists.txt  firmforth.c  gitrev.h
